env variables added

--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-DB_USERNAME="admin"
-DB_PASSWORD="dada"
-DB_HOST="cluster0.rr61ffl.mongodb.net"
-DB_NAME="Protouch"
+MONGODB_CONNECTION_STRING="mongodb+srv://admin:dada@cluster0.rr61ffl.mongodb.net/Protouch?retryWrites=true&w=majority"
